# duict-rust

./: .gitignore  README.md
lab1/image_editor/: Cargo.toml  README.md  images.txt
lab1/image_editor/src/: errors.rs  fs_uploader.rs  main.rs  s3_uploader.rs  uploader.rs
lab6_sync_primitives/: Cargo.toml  README.md
lab6_sync_primitives/src/: benchmark.rs  main.rs  my_arc.rs  my_mutex.rs
pr1/: .gitignore  Cargo.toml
pr1/src/: main.rs
pr2/: Cargo.toml  README.md
pr2/resources/: index.json
pr2/src/: main.rs
pr3/: Cargo.toml  README.md
pr3/resources/: index.db
pr3/src/: lib.rs  main.rs
pr5/: Cargo.toml  README.md
pr5/src/: main.rs
pr6/: README.md
pr7/: Cargo.toml  README.md  page_1.html
pr7/src/: main.rs
pr8/: Cargo.toml  README.md
pr8/src/: main.rs
pr9/: Cargo.toml  README.md  page_1.html
pr9/src/: main.rs
sr1/: Cargo.toml  README.md
sr1/src/: conversions.rs  macros_demo.rs  main.rs  ownership.rs
sr2/: Cargo.toml  README.md
sr2/src/: lib.rs
sr3/: Cargo.toml
sr3/src/: README.md  main.rs
sr4/: Cargo.toml  README.md
sr4/src/: main.rs
